crates/python_parser/tests/snapshots/invalid_syntax@expressions__subscript__invalid_slice_element.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/subscript/invalid_slice_element.py
---
## AST

```
Module(
    ModModule {
        range: 0..133,
        body: [
            Expr(
                ExprStmt {
                    range: 0..10,
                    value: Subscript(
                        SubscriptExpr {
                            range: 0..10,
                            value: Name(
                                NameExpr {
                                    range: 0..1,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            slice: Slice(
                                SliceExpr {
                                    range: 2..9,
                                    lower: Some(
                                        Named(
                                            NamedExpr {
                                                range: 2..8,
                                                target: Name(
                                                    NameExpr {
                                                        range: 2..3,
                                                        id: Name("x"),
                                                        ctx: Store,
                                                    },
                                                ),
                                                value: NumberLiteral(
                                                    NumberLiteralExpr {
                                                        range: 7..8,
                                                        value: Int(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                    upper: None,
                                    step: None,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 33..39,
                    value: Subscript(
                        SubscriptExpr {
                            range: 33..39,
                            value: Name(
                                NameExpr {
                                    range: 33..34,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            slice: Slice(
                                SliceExpr {
                                    range: 35..38,
                                    lower: Some(
                                        Starred(
                                            StarredExpr {
                                                range: 35..37,
                                                value: Name(
                                                    NameExpr {
                                                        range: 36..37,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    upper: None,
                                    step: None,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 40..46,
                    value: Subscript(
                        SubscriptExpr {
                            range: 40..46,
                            value: Name(
                                NameExpr {
                                    range: 40..41,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            slice: Slice(
                                SliceExpr {
                                    range: 42..45,
                                    lower: None,
                                    upper: Some(
                                        Starred(
                                            StarredExpr {
                                                range: 43..45,
                                                value: Name(
                                                    NameExpr {
                                                        range: 44..45,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    step: None,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 47..54,
                    value: Subscript(
                        SubscriptExpr {
                            range: 47..54,
                            value: Name(
                                NameExpr {
                                    range: 47..48,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            slice: Slice(
                                SliceExpr {
                                    range: 49..53,
                                    lower: None,
                                    upper: None,
                                    step: Some(
                                        Starred(
                                            StarredExpr {
                                                range: 51..53,
                                                value: Name(
                                                    NameExpr {
                                                        range: 52..53,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 70..73,
                    value: Subscript(
                        SubscriptExpr {
                            range: 70..73,
                            value: Name(
                                NameExpr {
                                    range: 70..71,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            slice: Name(
                                NameExpr {
                                    range: 72..73,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 123..133,
                    value: Subscript(
                        SubscriptExpr {
                            range: 123..133,
                            value: Name(
                                NameExpr {
                                    range: 123..124,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            slice: Named(
                                NamedExpr {
                                    range: 125..132,
                                    target: Starred(
                                        StarredExpr {
                                            range: 125..127,
                                            value: Name(
                                                NameExpr {
                                                    range: 126..127,
                                                    id: Name("x"),
                                                    ctx: Store,
                                                },
                                            ),
                                            ctx: Store,
                                        },
                                    ),
                                    value: NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 131..132,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x[x := 1:]
  |   ^^^^^^ Syntax Error: Unparenthesized named expression cannot be used here
2 | 
3 | # Starred expression
  |


  |
3 | # Starred expression
4 | x[*x:]
  |   ^^ Syntax Error: Starred expression cannot be used here
5 | x[:*x]
6 | x[::*x]
  |


  |
3 | # Starred expression
4 | x[*x:]
5 | x[:*x]
  |    ^^ Syntax Error: Starred expression cannot be used here
6 | x[::*x]
  |


  |
4 | x[*x:]
5 | x[:*x]
6 | x[::*x]
  |     ^^ Syntax Error: Starred expression cannot be used here
7 | 
8 | # Empty slice
  |


   |
 8 | # Empty slice
 9 | x[]
   |   ^ Syntax Error: Expected index or slice expression
10 | 
11 | # Mixed starred expression and named expression
   |


   |
11 | # Mixed starred expression and named expression
12 | x[*x := 1]
   |   ^^ Syntax Error: Assignment expression target must be an identifier
   |
